Trying to fix bg image on mobile.

--- a/rcstyle.css
+++ b/rcstyle.css
@@ -57,13 +57,15 @@
 	}
 
 
-	html { 
+	#main { 
 	  	background-color: black;
 	  	background: url(https://res.cloudinary.com/dexr0h5o5/image/upload/c_fill,e_grayscale,g_center,h_1728,w_2592/c_scale,h_1728,l_black_ehj1ga,o_75,w_2592/v1463512143/recordstore_nacx52.jpg) no-repeat center center fixed; 
 	  	-webkit-background-size: cover;
 	  	-moz-background-size: cover;
 	  	-o-background-size: cover;
 	  	background-size: cover;
+	  	width: 100%;
+	  	overflow: hidden;
 	}
 
 	.footer{
@@ -78,13 +80,15 @@
 	
 @media only screen and (max-width : 736px){
 	  	
-	html {
+	#main {
 	  		background-color: black;
 	  		background: url(https://res.cloudinary.com/dexr0h5o5/image/upload/c_fill,e_grayscale,g_center,h_750,w_1334/c_scale,h_750,l_black_ehj1ga,o_75,w_1334/v1463512143/recordstore_nacx52.jpg) no-repeat center center fixed; 
 	  	-webkit-background-size: cover;
 	  	-moz-background-size: cover;
 	  	-o-background-size: cover;
 	  	background-size: cover;
+	  	width: 100%;
+	  	overflow: hidden;
 		}
 		
 
